# scnn-lib

./: CMakeLists.txt  CMakeSettings.json  README.md
demos/digits/: CMakeLists.txt  main.cpp  main.hpp
include/scnn/: scnn.hpp
lib/: CMakeLists.txt  scnn.cpp
res/: win_res.rc
